# HypixelStrengthJudge

./: LICENSE  color.tailwind.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: ci.yml
src/: global.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/src/: api.rs  hypixel.rs  libs.rs  logRegex.rs  log_regex.rs  main.rs
src/App/: index.tsx
src/NavBar/: index.tsx
src/components/: App.tsx  Control.tsx  NavBar.tsx  SettingOption.tsx  Settings.tsx
src/components/Main/: GameInfo.tsx  LocationInfo.tsx  PartyInfo.tsx  PlayerName.tsx  PlayersInfo.tsx  UserInfo.tsx
src/interface/: config.d.ts  info.d.ts
src/language/: languages.ts
src/libs/: accentColors.ts  getBedwarsMode.ts
src/store/: config.ts
