[package]
authors = ["liangmimi"]
description = "Hypixel Strength Judge"
edition = "2021"
name = "bw_fkdr"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1", features = [] }

[dependencies]
futures = "0.3"
lazy_static = "1.4"
regex = "1"
reqwest = {version = "0.12.5", features = ["json"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "1", features = ["api-all", "macos-private-api"] }
tokio = {version = "1", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
